test/tests/optics/overlapping.golden

test\tests\optics\overlapping.hs:44:5: error:
    • set: cannot create product setter.
      Setters 'fir-0.0.0:Control.Type.Optic.Name_ "n"
      and 'fir-0.0.0:Control.Type.Optic.Index_ 0
      are not disjoint.
    • In a stmt of a 'do' block:
        assign
          @(Name "struct" :.: (Name "n" :*: Index 0)) (lit (4 :& 5 :& End))
      In the third argument of ‘entryPoint’, namely
        ‘do def
              @"struct"
              @RW
              @(Struct '["n" :-> Float, "b" :-> Bool])
              (lit (3 :& True :& End))
            assign
              @(Name "struct" :.: (Name "n" :*: Index 0)) (lit (4 :& 5 :& End))’
      In a stmt of a 'do' block:
        entryPoint
          @"main"
          @Vertex
          do def
               @"struct"
               @RW
               @(Struct '["n" :-> Float, "b" :-> Bool])
               (lit (3 :& True :& End))
             assign
               @(Name "struct" :.: (Name "n" :*: Index 0)) (lit (4 :& 5 :& End))
   |
44 |     assign @(Name "struct" :.: (Name "n" :*: Index 0)) ( lit ( 4 :& 5 :& End ) )
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
